# Multi-sliding-Contacts

./: .gitignore  CMakeLists.txt  README.md
TexFiles/: ChebyshevMethod.tex  abbr.tex  refs.bib
cnoid/: sim_mc_udp_wall_block.cnoid  slope.cnoid  slope_Saeid_10deg.cnoid  slope_Saeid_20deg.cnoid  slope_experiment.cnoid  stair.cnoid
cnoid/hrp4_model/: HRP4LIRMM_blockHand.wrl
cnoid/hrp4_model/hand_block/: hand_adapter.wrl  square_hand.wrl
etc/: WipingController.in.conf  WipingController.in.yaml  custom_plots.json  mc_rtc.conf  mc_rtc.yaml
launch/: control_display.launch  control_run.launch
src/: CMakeLists.txt  CoMQP.cpp  CoMQP.h  ForceFilterSG.h  FrictionEstimator.cpp  FrictionEstimator.h  SpaceVecAlgFilterSG.h  WipingController.cpp  WipingController.h  lib.cpp
src/states/: CMakeLists.txt  WipingController_ChooseTransition.cpp  WipingController_ChooseTransition.h  WipingController_ConstantAcceleration.cpp  WipingController_ConstantAcceleration.h  WipingController_Finish.cpp  WipingController_Finish.h  WipingController_PrepareWiping.cpp  WipingController_PrepareWiping.h  WipingController_PushWall.cpp  WipingController_PushWall.h  WipingController_PushWall_lf.cpp  WipingController_PushWall_lf.h  WipingController_PushWall_lh.cpp  WipingController_PushWall_lh.h  WipingController_PushWall_rh.cpp  WipingController_PushWall_rh.h  WipingController_ShufflePosture.cpp  WipingController_ShufflePosture.h  WipingController_WipeItBaby.cpp  WipingController_WipeItBaby.h  WipingController_WipeItBaby_lf.cpp  WipingController_WipeItBaby_lf.h  WipingController_WipeItBaby_lh.cpp  WipingController_WipeItBaby_lh.h  WipingController_WipeItBaby_rh.cpp  WipingController_WipeItBaby_rh.h
src/states/data/: LeftHandWiping.yaml  RightHandWiping.yaml  Stabilizer.yaml  StepDownSlope.yaml  StepUpSlope.yaml  Tunning.yaml  Wiping.yaml
wrlFiles/: HRP4LIRMM_block.wrl  LL.wrl
